--- a/ac/home.html
+++ b/ac/home.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link type="text/css" href="css/style.css" rel="stylesheet">
+    <script src="site.js"></script>
     <title>Página Inicial</title>
 </head>
 <body>
@@ -32,33 +33,7 @@
         </div>
       </nav>
 
-      <div id="carouselExampleIndicators" class="carousel slide">
-        
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="fotos/pexels-jermaine-ulinwa-3321584.jpg" class="d-block w-100" alt="banner 1">
-          </div>
-          <div class="carousel-item">
-            <img src="fotos/pexels-roman-odintsov-4552180.jpg" class="d-block w-100" alt="banner 2">
-          </div>
-          <div class="carousel-item">
-            <img src="fotos/foto3.webp" class="d-block w-100" alt="banner 3">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-      </div>
+  
 
       <div class="cards">
       <div class="card" style="width: 18rem;">
@@ -66,7 +41,7 @@
         <div class="card-body">
           <h5 class="card-title">Biquínis</h5>
           <p class="card-text">Explore o catalogo com os biquínis que estão na tendencia.</p>
-          <a href="" class="btn btn-primary">Navegar</a>
+          <a href="" class="btn btn-primary corbtn">Navegar</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -74,7 +49,7 @@
         <div class="card-body">
           <h5 class="card-title">Saídas de praia</h5>
           <p class="card-text">Explore o catalogo com as peças para acompanhar seu look.</p>
-          <a href="" class="btn btn-primary">Navegar</a>
+          <a href="" class="btn btn-primary corbtn">Navegar</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -82,10 +57,25 @@
         <div class="card-body">
           <h5 class="card-title">Maiôs</h5>
           <p class="card-text">Explore o catalogo com os maiôs que estão na tendencia.</p>
-          <a href="" class="btn btn-primary">Navegar</a>
+          <a href="" class="btn btn-primary corbtn">Navegar</a>
         </div>
       </div>
     </div>
+    <div class="novidades">
+      <h1>Novidades</h1>
+    </div>
+      <script>
+        const url = 'http://localhost:3000/produtos'
+        // buscando os dados
+        fetch(url)
+        .then(response => response.json())
+        .then(json => {
+        const div = document.getElementById("conteudo");
+        div.innerText = JSON.stringify(json)
+        })
+        </script>
+        <div id="app" class="produtos"></div>       
+    
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
           <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
